--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
     text-align: center;
     margin: 0;
     padding: 20px;
+    background: black;
 }
 
 .container {
@@ -28,7 +29,7 @@ button {
     padding: 20px;
     font-size: 1.2rem;
     border: none;
-    background: #34495e; /* Dark background for buttons */
+    background: linear-gradient(45deg, #182b61, #3B3B98);
     color: #ecf0f1;  /* Light text color */
     cursor: pointer;
     transition: 0.3s ease-in-out;
