--- a/l/styles.css
+++ b/l/styles.css
@@ -92,3 +92,15 @@ span {
     font-weight: bold;
     color: #00ffcc;
 }
+
+/* Remove spinner arrows in number input fields */
+input[type="number"] {
+    appearance: textfield; /* Standard */
+    -moz-appearance: textfield; /* Firefox */
+}
+
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0; /* Removes any extra spacing */
+}
