--- a/h/styles.css
+++ b/h/styles.css
@@ -43,3 +43,18 @@ button:hover {
     box-shadow: 0px 0px 10px #3a3f47;
     text-align: center;
 }
+
+.loading-container {
+    width: 100%;
+    background-color: #3a3f47;
+    border-radius: 10px;
+    overflow: hidden;
+    margin-top: 10px;
+}
+
+.loading-bar {
+    width: 0%;
+    height: 10px;
+    background-color: #1f6feb;
+    transition: width 0.3s ease-in-out;
+}
