--- a/h/styles.css
+++ b/h/styles.css
@@ -61,7 +61,8 @@ button:hover {
 }
 
 .loading-container {
-    width: 100%;
+    min-width: 300px;
+    max-width: 500px;
     background-color: #3a3f47;
     border-radius: 10px;
     overflow: hidden;
